--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,10 @@ body {
   width: 100%;
 }
 
+.element1 {
+  margin-top: 20px; /* Adjust this value as needed */
+}
+
 .mdl-layout__header {
   background-color: #00bcd4;
   color: #fff;
