--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 /* Customize styles for this page */
 body {
   font-family: 'Roboto', sans-serif;
-  background: url("https://source.unsplash.com/xg9tYmiE0-w") center/cover fixed no-repeat;
+  background: url("https://source.unsplash.com/2s3fI3M1lO0") center/cover fixed no-repeat;
   display: flex;
   justify-content: center;
   align-items: center;
