--- a/css/style.css
+++ b/css/style.css
@@ -1,63 +1,45 @@
-/* Set up Material Design styles */
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons');
-@import url('https://code.getmdl.io/1.3.0/material.indigo-pink.min.css');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap');
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Playfair Display', serif;
+}
+
+body {
+  background: #bbc6fa;
+  /*background: url("https://source.unsplash.com/xg9tYmiE0-w") center/cover fixed no-repeat;*/
+}
 
 /* Customize styles for this page */
-body {
-  font-family: 'Roboto', sans-serif;
-  background: url("https://source.unsplash.com/2s3fI3M1lO0") center/cover fixed no-repeat;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
-
 .container {
-  width: 100%;
-}
-
-.element1, .element2, .element3 {
-  display: block;
-  width: 100%;
-}
-
-.element1 {
-  margin-top: 20px; /* Adjust this value as needed */
-}
-
-.mdl-layout__header {
-  background-color: #00bcd4;
-  color: #fff;
-}
-
-.mdl-card {
-  width: 100%;
-  max-width: 500px;
-  margin: 16px;
-  box-sizing: border-box;
-}
-
-.mdl-card__title-text {
-  font-weight: 500;
-  font-size: 24px;
-}
-
-.mdl-card__supporting-text {
-  font-size: 20px;
-  line-height: 1.5;
+  font-family: 'Roboto', sans-serif;
+  background: #fff;
+  width: 700px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 10px;
   text-align: center;
-  margin: 16px;
+  box-shadow: 0 10px 20px 0px rgba(0, 0, 0, 0.15);
 }
 
-.mdl-card__actions {
-  text-align: center;
+.container h1{
+  font-size: 32px;
+  margin-bottom: 40px;
+  position: relative;
 }
 
-.mdl-button {
-  background-color: #00bcd4;
-  color: #fff;
-}
-
-.mdl-button:hover {
-  background-color: #008ba3;
+.container h1:after{
+  content: '';
+  width: 75px;
+  height: 3px;
+  border-radius: 3px;
+  background: rgb(23, 124, 229);
+  position: absolute;
+  bottom: -10px;
+  left: 50%;
+  transform: translateX(-50%);
 }
