--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
 /* Customize styles for this page */
 .container {
   background: #fff;
-  width: 700px;
+  width: 800px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -28,6 +28,7 @@ body {
 
 .container h1 {
   font-size: 36px;
+  margin-top: 10px;
   margin-bottom: 40px;
   position: relative;
 }
@@ -46,7 +47,10 @@ body {
 
 .container p {
   font-size: 23px;
+  margin-left: 10px;
+  margin-right: 10px;
   min-height: 110px;
+  position: sticky;
 }
 
 .container p::before,
@@ -59,6 +63,7 @@ body {
   margin-top: 0px;
   display: flex;
   justify-content: center;
+  margin-bottom: 10px;
 }
 
 .container button {
