--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
 /* Customize styles for this page */
 .container {
   background: #fff;
-  width: 800px;
+  width: 55vw;
   position: absolute;
   top: 50%;
   left: 50%;
