--- a/css/style.css
+++ b/css/style.css
@@ -21,9 +21,9 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  border-radius: 10px;
+  border-radius: 20px;
   text-align: center;
-  box-shadow: 0 10px 20px 0px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 10px 50px 0px rgba(0, 0, 0, 0.75);
 }
 
 .container h1 {
@@ -31,11 +31,13 @@ body {
   margin-top: 10px;
   margin-bottom: 40px;
   position: relative;
+  margin-left: 30px;
+  margin-right: 30px;
 }
 
 .container h1:after {
   content: "";
-  width: 75px;
+  width: 200px;
   height: 3px;
   border-radius: 3px;
   background: rgb(23, 124, 229);
@@ -47,8 +49,10 @@ body {
 
 .container p {
   font-size: 23px;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  margin-top: 20px;
   min-height: 110px;
   position: sticky;
 }
