--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 
 body {
   /*background: #bbc6fa;*/
-  background: url("https://source.unsplash.com/xg9tYmiE0-w") center/cover fixed
+  background: url("https://source.unsplash.com/JFeOy62yjXk") center/cover fixed
     no-repeat;
 }
 
