--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,59 @@ body {
   content: '"';
 }
 
+.fade-in {
+  animation: fadeIn 1.4s;
+  -webkit-animation: fadeIn 1.4s;
+  -moz-animation: fadeIn 1.4s;
+  -o-animation: fadeIn 1.4s;
+  -ms-animation: fadeIn 1.4s;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-moz-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-o-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-ms-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 .container div {
   width: 100%;
   margin-top: 0px;
